<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg"
    >

    <include
        android:id="@+id/more_top"
        layout="@layout/titlebar" >
    </include>  
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="?attr/more_bg"
        android:orientation="vertical" >
         <RelativeLayout
            android:id="@+id/downloadall"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/downloadall"
                android:textColor="#666666"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow" />
        </RelativeLayout>
         <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="?attr/divider" />
          <RelativeLayout
            android:id="@+id/downloadmanager"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/downloadmanager"
                android:textColor="#666666"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow" />
        </RelativeLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="?attr/more_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/newbieIntro"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/newbie"
                android:textColor="#666666"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow" />
        </RelativeLayout>
	 <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="?attr/divider" />

        <RelativeLayout
            android:id="@+id/data_version_check"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/dataupdate"
                android:textColor="#666666"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow" />

            <ProgressBar
                android:id="@+id/questionDownload"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:visibility="invisible"
                 />

        </RelativeLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="?attr/divider" />

        <RelativeLayout
            android:id="@+id/app_version_check"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/appupdate"
                android:textColor="#666666"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow" />            

        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="?attr/divider" />

        <RelativeLayout
            android:id="@+id/suggestion_view"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/suggestion"
                android:textColor="#666666"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="?attr/divider" />

        <RelativeLayout
            android:id="@+id/more_about"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/about"
                android:textColor="#666666"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right_arrow" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>